dialog sizing on small devices fixed

--- a/Kolan/wwwroot/scss/components/dialog.scss
+++ b/Kolan/wwwroot/scss/components/dialog.scss
@@ -64,6 +64,6 @@ input[type="color"] {
         right: 0;
         border-radius: 0;
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
     }
 }
